--- a/views/views.xml
+++ b/views/views.xml
@@ -1,49 +1,9 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="aa_prueba.list">
-      <field name="name">aa_prueba list</field>
-      <field name="model">aa_prueba.aa_prueba</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
--->
-
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="aa_prueba.action_window">
-      <field name="name">aa_prueba window</field>
-      <field name="res_model">aa_prueba.aa_prueba</field>
-      <field name="view_mode">tree,form</field>
-    </record>
--->
-
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="aa_prueba.action_server">
-      <field name="name">aa_prueba server</field>
-      <field name="model_id" ref="model_aa_prueba_aa_prueba"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
-
     <!-- VISTAS DE HUESPED -->
-    <record model="ir.ui.view" id="hotel.huesped_list_view">
-      <field name="name">hotel.huesped.view.tree</field>
-      <field name="model">hotel.huesped</field>
+    <record model="ir.ui.view" id="hospedaje.huesped_list_view">
+      <field name="name">hospedaje.huesped.view.tree</field>
+      <field name="model">hospedaje.huesped</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
@@ -52,41 +12,11 @@
         </tree>
       </field>
     </record>
-
-    <record model="ir.ui.view" id="hotel.huesped_form_view">
-        <field name="name">hotel.huesped.view.form</field>
-        <field name="model">hotel.huesped</field>
-        <field name="arch" type="xml">
-          <form string="Formulario de garaje">
-            <sheet>
-
-              <div class="oe_title">
-                <!-- <label class="oe_title_only" for="name" string="Dirección"/> -->
-                <h1>
-                  <field name="name" placeholder="Dirección"/>
-                </h1>
-              </div>
-
-                <group>
-                  <group>
-                    <separator string="Información general"/>
-                      <field name="plazas"/>
-                  </group>
-                </group>
-
-                  <group>
-                      <field name="coche_ids"/>
-                  </group>
-
-            </sheet>
-          </form>
-        </field>
-    </record>
-
+    
     <!-- VISTAS DE HABITACION -->
-    <record model="ir.ui.view" id="hotel.habitacion_list_view">
-      <field name="name">hotel.habitacion.view.tree</field>
-      <field name="model">hotel.habitacion</field>
+    <record model="ir.ui.view" id="hospedaje.habitacion_list_view">
+      <field name="name">hospedaje.habitacion.view.tree</field>
+      <field name="model">hospedaje.habitacion</field>
       <field name="arch" type="xml">
         <tree>
           <field name="numero"/>
@@ -98,9 +28,9 @@
 
 
     <!-- VISTAS DE LIMPIEZA -->
-    <record model="ir.ui.view" id="hotel.limpieza_list_view">
-      <field name="name">hotel.limpieza.view.tree</field>
-      <field name="model">hotel.limpieza</field>
+    <record model="ir.ui.view" id="hospedaje.limpieza_list_view">
+      <field name="name">hospedaje.limpieza.view.tree</field>
+      <field name="model">hospedaje.limpieza</field>
       <field name="arch" type="xml">
         <tree>
           <field name="turno"/>
@@ -110,29 +40,33 @@
     </record>
 
     <!--ACCIONES-->
-    <record model="ir.actions.act_window" id="hotel.huesped_action_window">
+    <record model="ir.actions.act_window" id="hospedaje.huesped_action_window">
       <field name="name">Huesped</field>
-      <field name="res_model">hotel.huesped</field>
+      <field name="res_model">hospedaje.huesped</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="hospedaje.habitacion_action_window">
+      <field name="name">Habitacion</field>
+      <field name="res_model">hospedaje.habitacion</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="hospedaje.limpieza_action_window">
+      <field name="name">Limpieza</field>
+      <field name="res_model">hospedaje.limpieza</field>
       <field name="view_mode">tree,form</field>
     </record>
 
 
 
     <!-- Top menu item -->
-        <menuitem name="Hotel" id="hotel.menu_root" web_icon="" />
+      <menuitem name="hospedaje" id="hospedaje.menu_root"/>
 
     <!-- menu categories -->
-    <menuitem name="Huesped" id="hotel.huesped_menu" parent="hotel.menu_root" action="hotel.huesped_action_window"/>
-    <menuitem name="Habitacion" id="hotel.habitacion_menu" parent="hotel.menu_root" action="hotel.huesped_action_window"/>
-    <menuitem name="Limpieza" id="hotel.limpieza_menu" parent="hotel.menu_root" action="hotel.huesped_action_window"/>
+    <menuitem name="Huesped" id="hospedaje.huesped_menu" parent="hospedaje.menu_root" action="hospedaje.huesped_action_window"/>
+    <menuitem name="Habitacion" id="hospedaje.habitacion_menu" parent="hospedaje.menu_root" action="hospedaje.habitacion_action_window"/>
+    <menuitem name="Limpieza" id="hospedaje.limpieza_menu" parent="hospedaje.menu_root" action="hospedaje.limpieza_action_window"/>
 
-    <!-- actions -->
-
-<!--
-    <menuitem name="List" id="aa_prueba.menu_1_list" parent="aa_prueba.menu_1"
-              action="aa_prueba.action_window"/>
-    <menuitem name="Server to list" id="aa_prueba" parent="aa_prueba.menu_2"
-              action="aa_prueba.action_server"/>
--->
   </data>
 </odoo>
