--- a/views/views.xml
+++ b/views/views.xml
@@ -9,6 +9,7 @@
           <field name="name"/>
           <field name="salida"/>
           <field name="fumador"/>
+          <!--<field name="imagen" widget="image" width='100px' /> -->
         </tree>
       </field>
     </record>
@@ -19,7 +20,7 @@
         <field name="arch" type="xml">
           <form string="Formulario de huesped">
             <sheet>
-
+              <!-- <field name="imagen" widget="image" class='oe_avatar' /> -->
               <div class="oe_title">
                 <h1>
                   <field name="name" placeholder="Nombre"/>
